--- a/3진법/3진법.vcxproj.filters
+++ b/3진법/3진법.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="가운데 글자 가져오기.cpp">
+    <ClCompile Include="3진법.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
