--- a/같은 숫자는 싫어(두개의 풀이)/같은 숫자는 싫어(두개의 풀이).vcxproj.filters
+++ b/같은 숫자는 싫어(두개의 풀이)/같은 숫자는 싫어(두개의 풀이).vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="가운데 글자 가져오기.cpp">
+    <ClCompile Include="같은 숫자는 싫어.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
