--- a/행렬의 덧셈/행렬의 덧셈.vcxproj.filters
+++ b/행렬의 덧셈/행렬의 덧셈.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="가운데 글자 가져오기.cpp">
+    <ClCompile Include="행렬의 덧셈.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
