--- a/부대복귀/부대복귀.vcxproj
+++ b/부대복귀/부대복귀.vcxproj
@@ -21,10 +21,10 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9a42651f-bc8a-456b-99e5-9ff1a1f7269d}</ProjectGuid>
-    <RootNamespace>바이러스</RootNamespace>
+    <ProjectGuid>{c0f6967a-f21f-434e-aa8b-14732bb7340a}</ProjectGuid>
+    <RootNamespace>부대복귀</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>바이러스(bfs)</ProjectName>
+    <ProjectName>부대복귀(다익스트라 알고리즘)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="바이러스.cpp" />
+    <ClCompile Include="부대복귀.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
