--- a/연속된 부분 수열의 합/연속된 부분 수열의 합.vcxproj
+++ b/연속된 부분 수열의 합/연속된 부분 수열의 합.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9a42651f-bc8a-456b-99e5-9ff1a1f7269d}</ProjectGuid>
-    <RootNamespace>바이러스</RootNamespace>
+    <ProjectGuid>{8a2f794e-8aa1-45ce-bf6c-a1763e617df8}</ProjectGuid>
+    <RootNamespace>연속된부분수열의합</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>바이러스(bfs)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="바이러스.cpp" />
+    <ClCompile Include="연속된 부분 수열의 합.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
