--- a/왕위 계승/왕위 계승.vcxproj
+++ b/왕위 계승/왕위 계승.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9a42651f-bc8a-456b-99e5-9ff1a1f7269d}</ProjectGuid>
-    <RootNamespace>바이러스</RootNamespace>
+    <ProjectGuid>{0a498cb7-d660-4450-9a8b-beaccd63d1eb}</ProjectGuid>
+    <RootNamespace>왕위계승</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>바이러스(bfs)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="바이러스.cpp" />
+    <ClCompile Include="왕위 계씅.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
