--- a/외계인의 기타 연주/외계인의 기타 연주.vcxproj
+++ b/외계인의 기타 연주/외계인의 기타 연주.vcxproj
@@ -21,10 +21,9 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9a42651f-bc8a-456b-99e5-9ff1a1f7269d}</ProjectGuid>
-    <RootNamespace>바이러스</RootNamespace>
+    <ProjectGuid>{c1f1e9d5-c868-4206-b8dc-f669f8c16d17}</ProjectGuid>
+    <RootNamespace>외계인의기타연주</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
-    <ProjectName>바이러스(bfs)</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -128,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="바이러스.cpp" />
+    <ClCompile Include="외계인의 기타연주.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
