--- a/카드 정렬하기/카드 정렬하기.vcxproj
+++ b/카드 정렬하기/카드 정렬하기.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{8566e81a-6a9f-40fc-8f7a-2d79227ca792}</ProjectGuid>
     <RootNamespace>카드정렬하기</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>카드 정렬하기(우선순위 큐 )</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
